--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
   },
   "homepage": "https://github.com/Arkanic/nullfront#readme",
   "dependencies": {
+    "@types/uuid": "^9.0.7",
     "cannon-es": "^0.20.0",
     "express": "^4.18.2",
     "jsonschema": "^1.4.1",
     "lodash": "^4.17.21",
-    "nanoid": "^5.0.3",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "striptags": "^3.2.0",
     "three": "^0.158.0",
     "throttle-debounce": "^5.0.0",
-    "ts-json-schema-generator": "^1.4.1"
+    "ts-json-schema-generator": "^1.4.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
